--- a/nolu/core/includes/buttons/recent_downloads.yaml
+++ b/nolu/core/includes/buttons/recent_downloads.yaml
@@ -3,7 +3,7 @@
 #         RECENT_DOWNLOADS
 #
 #################################################
-# TODO: RENAME?
+# TODO: RENAME? & check name
 recently_downloaded:
   name: Senast nedladdat
   state_display: >
