--- a/nolu/core/includes/views/includes/main_header/main_header.card.yaml
+++ b/nolu/core/includes/views/includes/main_header/main_header.card.yaml
@@ -19,5 +19,5 @@ card:
     #     DEFAULT
     #################################################
     # KEEP THIS HERE!!! See dummy button card why...
-    - !include dummy_button_card/dummy_button_card.yaml
+    - !include dummy_button/dummy_button.card.yaml
     - !include main_menu/main_menu.llg.yaml
