--- a/nolu/custom/includes/sensors/template_sensors/binary_sensors/motion_sensors.binary.yaml
+++ b/nolu/custom/includes/sensors/template_sensors/binary_sensors/motion_sensors.binary.yaml
@@ -1,7 +1,9 @@
-- platform: template
-  sensors:
-    ####################################################################
-    #
-    #         MOTION SENSORS
-    #
-    ####################################################################
+####################################################################
+#
+#         MOTION SENSORS
+#
+####################################################################
+# https://www.home-assistant.io/integrations/template/
+#
+# - platform: template
+#   sensors:
