--- a/secrets.sample.yaml
+++ b/secrets.sample.yaml
@@ -1,3 +1,8 @@
+####################################################################
+#
+#         SECRETS
+#
+####################################################################
 # https://www.home-assistant.io/docs/configuration/secrets/
 
 # HOME ASSISTANT
@@ -9,16 +14,3 @@ hass_unit_system: 'metric'
 hass_temperature_unit: 'C'
 hass_time_zone: 'Europe/Amsterdam'
 hass_external_url: 'https://xxxxxx.ui.nabu.casa'
-
-# HTTP
-http_trusted_proxies:
-
-# PERSONS IDENTITIES
-xxxxxx1_iphonedetect_host: xxx
-xxxxxx1_person_user_id: xxx
-
-xxxxxx2_iphonedetect_host: xxx
-xxxxxx2_person_user_id: xxx
-
-# MARIA DB
-recorder_maria_db_url: mysql://xxxx
