#6 (feat): adding power plug switch

--- a/nolu/custom/custom.config.yaml
+++ b/nolu/custom/custom.config.yaml
@@ -23,6 +23,12 @@ home:
         - type: markdown
           content: 'Just a markdown card'
 
+        #################################################
+        #         SWITCH EXAMPLE
+        #################################################
+        - type: power_plug
+          
+
 #################################################
 #
 #         NOT-FOUND - 404
