--- a/nolu/custom/package/sensors.package.yaml
+++ b/nolu/custom/package/sensors.package.yaml
@@ -1,9 +1,28 @@
 ####################################################################
 #
-#         SENSORS - !DON'T EDIT THIS FILE!
+#         BINARY SENSORS - !DON'T EDIT THIS FILE!
 #
-# Place your custom integration sensors in the integration sensors folder, like so:
-# `nolu/custom/includes/sensors/integration_sensors/my_integration_sensor.integration.yaml`
+# Place your custom binary sensors in the binary_sensors folder, like so:
+# `nolu/custom/includes/sensors/template_sensors/binary_sensors/my_binary_sensor.binary.yaml`
 #
 ####################################################################
-sensor: !include_dir_merge_list ../includes/sensors/integration_sensors
+binary_sensor: !include_dir_merge_list ../includes/sensors/binary_sensors/
+
+####################################################################
+#
+#         BUNDLED SENSORS - !DON'T EDIT THIS FILE!
+#
+# This directory contains both the sensors created by native integrations
+# AND the custom template sensors.
+#
+# The native integration sensors are the ones
+# that are added by the integration platform.
+# Place your custom sensors in the template_sensors folder, like so:
+# `nolu/custom/includes/sensors/bundled_sensors/integration_sensors/integration_name.sensor.yaml`
+#
+# The custom template sensors are created by the user and can contain anything they like.
+# Place your custom sensors in the template_sensors folder, like so:
+# `nolu/custom/includes/sensors/bundled_sensors/template_sensors/my_sensor.sensor.yaml`
+#
+####################################################################
+sensor: !include_dir_merge_list ../includes/sensors/bundled_sensors/
