--- a/configuration.yaml
+++ b/configuration.yaml
@@ -19,8 +19,8 @@ homeassistant:
   # and what is mandatory for Nolu
   # https://www.home-assistant.io/docs/configuration/packages/
   packages:
-    core_package: !include_dir_merge_named nolu/core/package/
-    custom_package: !include_dir_merge_named nolu/custom/package/
+    core_package: !include_dir_merge_named nolu/core/packages/
+    custom_package: !include_dir_merge_named nolu/custom/packages/
 
   # Nolu - mandatory
   # Customize your entities
