refactor development foundation

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ nolu/custom/includes/config/climates/
 nolu/custom/includes/config/device_trackers/
 nolu/custom/includes/config/notifiers/
 nolu/custom/includes/config/vendors/
+nolu/custom/packages/
 
 # Sensors
 nolu/custom/includes/sensors/
@@ -40,6 +41,7 @@ nolu/custom/includes/switches/
 nolu/custom/includes/templates/
 
 # Should not be ignored
+!example_sensors.binary.yaml
 !entity_counters.*.yaml
 !system_monitor.integration.yaml
 !time_date.integration.yaml
