--- a/nolu/custom_example/includes/config/recorder.config.yaml
+++ b/nolu/custom_example/includes/config/recorder.config.yaml
@@ -2,5 +2,11 @@
 #         RECORDER
 ####################################################################
 # https://www.home-assistant.io/integrations/recorder/
+
+##################################################################
+#
+#                 EXAMPLE CONFIG
+#
+##################################################################
 #
 # db_url: !secret recorder_maria_db_url
