--- a/configuration.yaml
+++ b/configuration.yaml
@@ -20,12 +20,12 @@ homeassistant:
   # https://www.home-assistant.io/docs/configuration/packages/
   packages:
     core_package: !include_dir_merge_named nolu/core/packages/
-    custom_package: !include_dir_merge_named nolu/custom/example_packages/
+    custom_package: !include_dir_merge_named nolu/custom_example/packages/
 
   # Nolu - mandatory
   # Customize your entities
   # https://www.home-assistant.io/docs/configuration/customizing-devices/
-  customize: !include nolu/custom/customize.config.yaml
+  customize: !include nolu/custom_example/customize.config.yaml
 
 # Default config to support the default integrations
 # https://www.home-assistant.io/integrations/default_config/
