--- a/nolu/custom_example/includes/config/http.config.yaml
+++ b/nolu/custom_example/includes/config/http.config.yaml
@@ -2,6 +2,12 @@
 #         HTTP
 ####################################################################
 # https://www.home-assistant.io/integrations/http/
+
+##################################################################
+#
+#                 EXAMPLE CONFIG
+#
+##################################################################
 #
 # use_x_forwarded_for: true
 # trusted_proxies: !secret http_trusted_proxies
