--- a/nolu/core/packages/configuration.package.yaml
+++ b/nolu/core/packages/configuration.package.yaml
@@ -3,4 +3,4 @@ frontend: !include ../includes/config/frontend.config.yaml
 lovelace: !include ../includes/config/lovelace.config.yaml
 lovelace_gen:
   core_config: !include ../core.config.yaml
-  custom_config: !include ../../custom/custom.config.yaml
+  custom_config: !include ../../custom_example/custom.config.yaml
